fixed layer swtcher button hiding behind draw tools on android

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -76,7 +76,7 @@ th#name{
 
 .layer-switcher {
     margin-top: 4em;
-    top: 12.5em;
+    top: 175px;
     left: 0.5em;
     right: auto;
     background: white;
